Fix on file input and textarea alignments

--- a/RedbackNg/src/app/inputs/abstract/rb-field-input.css
+++ b/RedbackNg/src/app/inputs/abstract/rb-field-input.css
@@ -62,9 +62,23 @@
     padding: var(--v3px) 0px;
     width: 100%;
     z-index: 1;
-    resize: none;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.rb-input-textarea {
+    display: flex;
+    font-size: 1rem;
+    border-width: 0px 0px 1px 0px;
+    border-color: lightgrey;
+    background-color: transparent;
+    outline: none;
+    margin-top: var(--v16px);
+    padding: var(--v3px) 0px;
+    width: 100%;
+    z-index: 1;
+    resize: none;
+
 }
 
 .rb-input-mandatory {
