--- a/RedbackNg/src/app/inputs/rb-file-input/rb-file-input.component.css
+++ b/RedbackNg/src/app/inputs/rb-file-input/rb-file-input.component.css
@@ -36,7 +36,7 @@
 	min-width: 0px;
 	min-height: 0px;
     object-fit: contain;
-    border: 1px solid #888;
+    /*border: 1px solid #888;*/
 }
 
 .rb-file-input-icon {
